--- a/Pobezhdatel/Views/Shared/_Layout.cshtml
+++ b/Pobezhdatel/Views/Shared/_Layout.cshtml
@@ -2,21 +2,37 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Pobezhdatel</title>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Pobezhdatel</title>
 
-        <!-- Render styles -->
-        @Styles.Render("~/Content/site")
+    <!-- Render styles -->
+    @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/site")
 
-        <!-- Render scripts -->
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/signalr")
-        <script src="~/signalr/hubs"></script>
+    <!-- Render scripts -->
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/signalr")
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/signalr/hubs"></script>
 
-    </head>
-    <body>
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Побеждатель</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
         @RenderBody()
-    </body>
+    </main>
+    <footer>
+        <address></address>
+    </footer>
+</body>
 </html>
