--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,1 +1,31 @@
-﻿
+﻿<div class="container">
+    <div class="game-chat-panel">
+        <div class="panel panel-default game-chat-info">
+            <div class="panel-body">
+                <b>Перенос строки: </b>Enter<br/>
+                <b>Отправка сообщения: </b>Ctrl + Enter<br/>
+                <b>Кинуть куб: </b>//XdY, где X - количество кубов,
+                Y - количество граней кубов <br/>
+                <b>Примеры: </b>//2d6 //3d10 //1d20 <br/>
+                В любом месте текста сообщения может быть сколько угодно кубов.
+            </div>
+        </div>
+
+        <div class="panel panel-default game-chat">
+            <div class="panel-body">
+                Пока что нет сообщений...
+            </div>
+        </div>
+    </div>
+
+    <div class="main-chat-input">
+        <textarea class="form-control" rows="7"></textarea>
+        <button type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+        </button>
+    </div>
+</div>
+
+<script>
+    
+</script>
