--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -1,20 +1,15 @@
 ﻿<div class="container">
     <div class="game-chat-panel">
-        <div class="panel panel-default game-chat-info">
-            <div class="panel-body">
-                <b>Перенос строки: </b>Enter<br/>
-                <b>Отправка сообщения: </b>Ctrl + Enter<br/>
-                <b>Кинуть куб: </b>//XdY, где X - количество кубов,
-                Y - количество граней кубов <br/>
-                <b>Примеры: </b>//2d6 //3d10 //1d20 <br/>
-                В любом месте текста сообщения может быть сколько угодно кубов.
-            </div>
+        <div class="game-info">
+            <b>Перенос строки: </b>Enter<br />
+            <b>Отправка сообщения: </b>Ctrl + Enter<br />
+            <b>Кинуть куб: </b>//XdY, где X - количество кубов,
+            Y - количество граней кубов <br />
+            <b>Примеры: </b>//2d6 //3d10 //1d20 <br />
+            В любом месте текста сообщения может быть сколько угодно кубов.
         </div>
-
-        <div class="panel panel-default game-chat">
-            <div class="panel-body">
-                Пока что нет сообщений...
-            </div>
+        <div class="game-chat">
+            Пока что нет сообщений...
         </div>
     </div>
 
@@ -27,5 +22,5 @@
 </div>
 
 <script>
-    
+
 </script>
