--- a/Pobezhdatel/Content/Site.less
+++ b/Pobezhdatel/Content/Site.less
@@ -65,6 +65,7 @@
     margin-right: 1em;
 }
 
+/* Container for the message text and player name. */
 .message {
     display: flex;
     flex-direction: row;
@@ -80,10 +81,12 @@
     border-bottom: solid 1px #e1e1e1;
 }
 
+/* Remove border of the last message. */
 .message:last-of-type {
     border: none;
 }
 
+/* Properties of player name in a message.*/
 .player-name {
     text-align: center;
     font-weight: bold;
@@ -91,6 +94,7 @@
     width: 70px;
 }
 
+/* Properties of message text.*/
 .message-body {
     flex-grow: 1;
     
