Sending messages to server and messages receiving have been implemented. Some bugs have been fixed.

--- a/Pobezhdatel/Content/Site.less
+++ b/Pobezhdatel/Content/Site.less
@@ -89,6 +89,7 @@
 /* Properties of player name in a message.*/
 .player-name {
     text-align: center;
+    word-wrap: break-word;
     font-weight: bold;
     min-width: 70px;
     width: 70px;
