Fixed a bug of bootstrap including.

--- a/Pobezhdatel/Views/Shared/_Layout.cshtml
+++ b/Pobezhdatel/Views/Shared/_Layout.cshtml
@@ -8,13 +8,13 @@
     <title>Pobezhdatel</title>
 
     <!-- Render styles -->
-    @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/bootstrap_styles")
     @Styles.Render("~/Content/site")
 
     <!-- Render scripts -->
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/signalr")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap_scripts")
     <script src="~/signalr/hubs"></script>
 
 </head>
