Simplified rolling of one dice. Added possibility to roll dices in russian. Fixed bug of dice rolling.

--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -4,11 +4,12 @@
             <p>
                 <b>Бросок кубов: </b>//XdY, где X - количество кубов,
                 Y - количество граней кубов <br />
+                Аналог на русском: //XкY
             </p>
             <p>
                 В одном броске может быть 1-9 кубов с 1-100 гранями (от 1d1 до 9d100).<br />
                 В любом месте текста сообщения может быть сколько угодно бросков.<br />
-                <b>Примеры: </b>//2d6 //3d10 //1d20
+                <b>Примеры: </b>//2d6 //3d24 //1d100
             </p>
         </div>
         <div class="game-chat">
