Added some more descriptions.

--- a/Pobezhdatel/Views/Home/Index.cshtml
+++ b/Pobezhdatel/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
         <div class="game-info">
             <p>
                 <b>Бросок кубов: </b>//XdY, где X - количество кубов,
-                Y - количество граней кубов <br />
-                Аналог на русском: //XкY
+                Y - количество граней кубов<br />
+                Аналог на русском: //XкY<br />
+                Если куб один, то Х можно не писать: //d6
             </p>
             <p>
                 В одном броске может быть 1-9 кубов с 1-100 гранями (от 1d1 до 9d100).<br />
